Update the Notebook

--- a/python_scripts_ckpcet/supervised_classification/classification_modeling_on_house_price_data.ipynb
+++ b/python_scripts_ckpcet/supervised_classification/classification_modeling_on_house_price_data.ipynb
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1488,6 +1488,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>Price</th>\n",
        "      <th>Residential Area</th>\n",
        "      <th>Air Quality</th>\n",
@@ -1500,143 +1501,179 @@
        "      <th>Number of Hotel Rooms</th>\n",
        "      <th>Rainfall</th>\n",
        "      <th>Parks</th>\n",
-       "      <th>Airport</th>\n",
-       "      <th>Waterbody</th>\n",
-       "      <th>Bus Terminal</th>\n",
+       "      <th>index</th>\n",
+       "      <th>Airport_NO</th>\n",
+       "      <th>Airport_YES</th>\n",
+       "      <th>Waterbody_Lake</th>\n",
+       "      <th>Waterbody_Lake and River</th>\n",
+       "      <th>Waterbody_River</th>\n",
+       "      <th>Bus Terminal_YES</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>24.0</td>\n",
-       "      <td>32.31</td>\n",
-       "      <td>0.538</td>\n",
-       "      <td>6.575</td>\n",
-       "      <td>65.2</td>\n",
-       "      <td>4.35</td>\n",
-       "      <td>24.7</td>\n",
-       "      <td>4.98</td>\n",
-       "      <td>5.480</td>\n",
-       "      <td>11.1920</td>\n",
-       "      <td>23</td>\n",
-       "      <td>0.049347</td>\n",
-       "      <td>YES</td>\n",
-       "      <td>River</td>\n",
-       "      <td>YES</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.154792</td>\n",
+       "      <td>-1.282444</td>\n",
+       "      <td>-0.137094</td>\n",
+       "      <td>0.408975</td>\n",
+       "      <td>-0.115644</td>\n",
+       "      <td>0.172845</td>\n",
+       "      <td>1.462167</td>\n",
+       "      <td>-1.066368</td>\n",
+       "      <td>-1.640299</td>\n",
+       "      <td>-0.352111</td>\n",
+       "      <td>-1.302068</td>\n",
+       "      <td>-0.473132</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>21.6</td>\n",
-       "      <td>37.07</td>\n",
-       "      <td>0.469</td>\n",
-       "      <td>6.421</td>\n",
-       "      <td>78.9</td>\n",
-       "      <td>4.99</td>\n",
-       "      <td>22.2</td>\n",
-       "      <td>9.14</td>\n",
-       "      <td>7.332</td>\n",
-       "      <td>12.1728</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0.046146</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>Lake</td>\n",
-       "      <td>YES</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.106592</td>\n",
+       "      <td>-0.590059</td>\n",
+       "      <td>-0.733195</td>\n",
+       "      <td>0.189974</td>\n",
+       "      <td>0.369741</td>\n",
+       "      <td>0.476100</td>\n",
+       "      <td>0.304963</td>\n",
+       "      <td>-0.484136</td>\n",
+       "      <td>-0.384875</td>\n",
+       "      <td>-0.166019</td>\n",
+       "      <td>0.215194</td>\n",
+       "      <td>-0.775225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>34.7</td>\n",
-       "      <td>37.07</td>\n",
-       "      <td>0.469</td>\n",
-       "      <td>7.185</td>\n",
-       "      <td>61.1</td>\n",
-       "      <td>5.03</td>\n",
-       "      <td>22.2</td>\n",
-       "      <td>4.03</td>\n",
-       "      <td>7.394</td>\n",
-       "      <td>101.1200</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0.045764</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>River</td>\n",
-       "      <td>YES</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.320127</td>\n",
+       "      <td>-0.590059</td>\n",
+       "      <td>-0.733195</td>\n",
+       "      <td>1.276446</td>\n",
+       "      <td>-0.260905</td>\n",
+       "      <td>0.495053</td>\n",
+       "      <td>0.304963</td>\n",
+       "      <td>-1.199330</td>\n",
+       "      <td>-0.342847</td>\n",
+       "      <td>16.710340</td>\n",
+       "      <td>-0.104230</td>\n",
+       "      <td>-0.811237</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>33.4</td>\n",
-       "      <td>32.18</td>\n",
-       "      <td>0.458</td>\n",
-       "      <td>6.998</td>\n",
-       "      <td>45.8</td>\n",
-       "      <td>6.21</td>\n",
-       "      <td>21.3</td>\n",
-       "      <td>2.94</td>\n",
-       "      <td>9.268</td>\n",
-       "      <td>11.2672</td>\n",
-       "      <td>45</td>\n",
-       "      <td>0.047151</td>\n",
-       "      <td>YES</td>\n",
-       "      <td>Lake</td>\n",
-       "      <td>YES</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.178544</td>\n",
+       "      <td>-1.301354</td>\n",
+       "      <td>-0.828226</td>\n",
+       "      <td>1.010516</td>\n",
+       "      <td>-0.802977</td>\n",
+       "      <td>1.054179</td>\n",
+       "      <td>-0.111631</td>\n",
+       "      <td>-1.351886</td>\n",
+       "      <td>0.927490</td>\n",
+       "      <td>-0.337843</td>\n",
+       "      <td>0.454762</td>\n",
+       "      <td>-0.680402</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>36.2</td>\n",
-       "      <td>32.18</td>\n",
-       "      <td>0.458</td>\n",
-       "      <td>7.147</td>\n",
-       "      <td>54.2</td>\n",
-       "      <td>6.16</td>\n",
-       "      <td>21.3</td>\n",
-       "      <td>5.33</td>\n",
-       "      <td>8.824</td>\n",
-       "      <td>11.2896</td>\n",
-       "      <td>55</td>\n",
-       "      <td>0.039474</td>\n",
-       "      <td>NO</td>\n",
-       "      <td>Lake</td>\n",
-       "      <td>YES</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.483492</td>\n",
+       "      <td>-1.301354</td>\n",
+       "      <td>-0.828226</td>\n",
+       "      <td>1.222407</td>\n",
+       "      <td>-0.505369</td>\n",
+       "      <td>1.030487</td>\n",
+       "      <td>-0.111631</td>\n",
+       "      <td>-1.017382</td>\n",
+       "      <td>0.626514</td>\n",
+       "      <td>-0.333593</td>\n",
+       "      <td>1.253320</td>\n",
+       "      <td>-1.404723</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Price  Residential Area  Air Quality  Room Numbers   Age  Distance  \\\n",
-       "0   24.0             32.31        0.538         6.575  65.2      4.35   \n",
-       "1   21.6             37.07        0.469         6.421  78.9      4.99   \n",
-       "2   34.7             37.07        0.469         7.185  61.1      5.03   \n",
-       "3   33.4             32.18        0.458         6.998  45.8      6.21   \n",
-       "4   36.2             32.18        0.458         7.147  54.2      6.16   \n",
+       "   index     Price  Residential Area  Air Quality  Room Numbers       Age  \\\n",
+       "0      0  0.154792         -1.282444    -0.137094      0.408975 -0.115644   \n",
+       "1      1 -0.106592         -0.590059    -0.733195      0.189974  0.369741   \n",
+       "2      2  1.320127         -0.590059    -0.733195      1.276446 -0.260905   \n",
+       "3      3  1.178544         -1.301354    -0.828226      1.010516 -0.802977   \n",
+       "4      4  1.483492         -1.301354    -0.828226      1.222407 -0.505369   \n",
        "\n",
-       "   Teachers  Proportion of Poor Population  Number of Hospital Beds  \\\n",
-       "0      24.7                           4.98                    5.480   \n",
-       "1      22.2                           9.14                    7.332   \n",
-       "2      22.2                           4.03                    7.394   \n",
-       "3      21.3                           2.94                    9.268   \n",
-       "4      21.3                           5.33                    8.824   \n",
+       "   Distance  Teachers  Proportion of Poor Population  Number of Hospital Beds  \\\n",
+       "0  0.172845  1.462167                      -1.066368                -1.640299   \n",
+       "1  0.476100  0.304963                      -0.484136                -0.384875   \n",
+       "2  0.495053  0.304963                      -1.199330                -0.342847   \n",
+       "3  1.054179 -0.111631                      -1.351886                 0.927490   \n",
+       "4  1.030487 -0.111631                      -1.017382                 0.626514   \n",
        "\n",
-       "   Number of Hotel Rooms  Rainfall     Parks Airport Waterbody Bus Terminal  \n",
-       "0                11.1920        23  0.049347     YES     River          YES  \n",
-       "1                12.1728        42  0.046146      NO      Lake          YES  \n",
-       "2               101.1200        38  0.045764      NO     River          YES  \n",
-       "3                11.2672        45  0.047151     YES      Lake          YES  \n",
-       "4                11.2896        55  0.039474      NO      Lake          YES  "
+       "   Number of Hotel Rooms  Rainfall     Parks  index  Airport_NO  Airport_YES  \\\n",
+       "0              -0.352111 -1.302068 -0.473132      0       False         True   \n",
+       "1              -0.166019  0.215194 -0.775225      1        True        False   \n",
+       "2              16.710340 -0.104230 -0.811237      2        True        False   \n",
+       "3              -0.337843  0.454762 -0.680402      3       False         True   \n",
+       "4              -0.333593  1.253320 -1.404723      4        True        False   \n",
+       "\n",
+       "   Waterbody_Lake  Waterbody_Lake and River  Waterbody_River  Bus Terminal_YES  \n",
+       "0           False                     False             True              True  \n",
+       "1            True                     False            False              True  \n",
+       "2           False                     False             True              True  \n",
+       "3            True                     False            False              True  \n",
+       "4            True                     False            False              True  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = pd.concat([df_num, df_cat], axis = 1)\n",
+    "X = pd.concat([df_scale, encoded], axis = 1)\n",
     "\n",
     "X.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,6 +1682,46 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train,X_test,y_train,y_test = train_test_split(X,target, test_size = 0.2, random_state = 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n",
+    "# Create amodel using Decision Tree Classifier\n",
+    "\n",
+    "tree_model = DecisionTreeClassifier()\n",
+    "\n",
+    "# Fit the Model\n",
+    "tree_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the Model\n",
+    "predictions = tree_model.predict(X_test)\n",
+    "\n",
+    "# Print the Accuracy\n",
+    "print(\"Accuracy: \", accuracy_score(y_test, predictions))\n",
+    "\n"
    ]
   },
   {
